--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,22 +11,24 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: azure/docker-login@v1
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      - name: Login to DockerHub
+        uses: docker/docker-login@v1
         with:
-          login-server: quay.io
-          username: '${{ secrets.QUAYIO_USERNAME }}'
-          password: '${{ secrets.QUAYIO_PASSWORD }}'
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
       - name: Set up Docker Buildx
         id: buildx
-        uses: crazy-max/ghaction-docker-buildx@v1
-        with:
-          buildx-version: latest
-          qemu-version: latest
+        uses: docker/setup-buildx-action@v1
       - name: Available platforms
         run: 'echo ${{ steps.buildx.outputs.platforms }}'
-      - name: Run Buildx
-        run: |
-          docker buildx build \
-            --platform linux/amd64,linux/arm64 \
-            --push -t quay.io/wish/nodetaint:${GITHUB_REF##*/} .
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+         context: .
+         file: ./Dockerfile
+         platforms: linux/amd64,linux/arm64
+         push: true
+         tags: |
+           pavantri/nodetaint:latest
